Rename module p2p to network